--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,62 @@
-beautifulsoup4==4.6.3
+absl-py==0.7.1
+aniso8601==6.0.0
+argon2-cffi==19.1.0
+asn1crypto==0.24.0
+astor==0.7.1
+bcrypt==3.1.6
+beautifulsoup4==4.7.1
+certifi==2019.3.9
+cffi==1.11.5
+chardet==3.0.4
+Click==7.0
+conda==4.6.4
+conda-build==3.17.8
+cryptography==2.5
+filelock==3.0.10
 Flask==1.0.2
-Flask-OAuthlib==0.9.5
-Flask-RESTful==0.3.7
-gunicorn==19.9.0
-h5py==2.8.0
+Flask-Cors==3.0.7
+Flask-RESTful==0.3.6
+Flask-SQLAlchemy==2.3.2
+gast==0.2.2
+glob2==0.6
+grpcio==1.16.1
+h5py==2.9.0
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.1
 Keras==2.2.4
-matplotlib==3.0.3
-np-utils==0.5.10.0
-numpy==1.14.6
-oauth2client==4.1.3
-oauthlib==2.1.0
-opencv-contrib-python==3.4.3.18
-opencv-python==3.4.5.20
-pandas==0.22.0
-Pillow==4.1.1
-pip-tools==3.4.0
+Keras-Applications==1.0.7
+Keras-Preprocessing==1.0.9
+libarchive-c==2.8
+lief==0.9.0
+Markdown==2.6.11
+MarkupSafe==1.1.1
+mock==2.0.0
+numpy==1.16.2
+pandas==0.24.2
+passlib==1.7.1
+pbr==5.1.3
+pkginfo==1.5.0.1
+protobuf==3.7.1
+psutil==5.6.1
+pycosat==0.6.3
+pycparser==2.19
+pycrypto==2.6.1
+pyOpenSSL==19.0.0
 PySocks==1.6.8
-regex==2018.1.10
-requests==2.18.4
-requests-oauthlib==1.2.0
-rsa==4.0
-scikit-image==0.13.1
-scikit-learn==0.20.3
-scipy==1.1.0
-sklearn==0.0
-SQLAlchemy==1.2.18
-sqlparse==0.2.4
-tensor2tensor==1.11.0
-tensorboard==1.13.0
-tensorboardcolab==0.0.22
+python-dateutil==2.8.0
+pytz==2019.1
+PyYAML==5.1
+requests==2.21.0
+ruamel-yaml==0.15.46
+scipy==1.2.1
+six==1.12.0
+soupsieve==1.9.1
+SQLAlchemy==1.3.3
+tensorboard==1.13.1
 tensorflow==1.13.1
 tensorflow-estimator==1.13.0
-tensorflow-hub==0.3.0
-tensorflow-metadata==0.12.1
-tensorflow-probability==0.6.0
-tflearn==0.3.2
-tqdm==4.28.1
-urllib3==1.22
+termcolor==1.1.0
+tqdm==4.31.1
+urllib3==1.24.1
+Werkzeug==0.15.2
