--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ asn1crypto==0.24.0
 astor==0.7.1
 bcrypt==3.1.6
 beautifulsoup4==4.7.1
+CacheControl==0.12.5
+cachetools==2.1.0
 certifi==2019.3.9
 cffi==1.11.5
 chardet==3.0.4
@@ -13,12 +15,21 @@ conda==4.6.4
 conda-build==3.17.8
 cryptography==2.5
 filelock==3.0.10
+firebase-admin==2.16.0
 Flask==1.0.2
 Flask-Cors==3.0.7
 Flask-RESTful==0.3.6
-Flask-SQLAlchemy==2.3.2
+Flask-SQLAlchemy==2.4.0
 gast==0.2.2
 glob2==0.6
+google-api-core==1.10.0
+google-auth==1.6.3
+google-cloud-bigquery==1.11.2
+google-cloud-core==0.29.1
+google-cloud-firestore==1.0.0
+google-cloud-storage==1.15.0
+google-resumable-media==0.3.2
+googleapis-common-protos==1.5.9
 grpcio==1.16.1
 h5py==2.9.0
 idna==2.8
@@ -32,13 +43,16 @@ lief==0.9.0
 Markdown==2.6.11
 MarkupSafe==1.1.1
 mock==2.0.0
-numpy==1.16.2
+msgpack==0.6.1
+numpy==1.16.3
 pandas==0.24.2
 passlib==1.7.1
 pbr==5.1.3
 pkginfo==1.5.0.1
 protobuf==3.7.1
-psutil==5.6.1
+psutil==5.6.2
+pyasn1==0.4.4
+pyasn1-modules==0.2.4
 pycosat==0.6.3
 pycparser==2.19
 pycrypto==2.6.1
@@ -48,6 +62,7 @@ python-dateutil==2.8.0
 pytz==2019.1
 PyYAML==5.1
 requests==2.21.0
+rsa==3.4.2
 ruamel-yaml==0.15.46
 scipy==1.2.1
 six==1.12.0
