--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM frolvlad/alpine-miniconda3
+FROM frolvlad/alpine-miniconda3:python3.6
 
 RUN conda install -c conda-forge -y \
     conda-build \
@@ -19,7 +19,6 @@ RUN pip install --no-cache-dir firebase-admin
 
 WORKDIR /tmp
 COPY app/ .
-COPY Logs/ Logs/
-EXPOSE 33507
+EXPOSE 8080
 
-CMD ["sh"]
+CMD ["python", "app.py"]
