--- a/elab/Dockerfile
+++ b/elab/Dockerfile
@@ -16,9 +16,11 @@ RUN conda install -c conda-forge -y \
   && conda build purge-all
 
 RUN pip install --no-cache-dir firebase-admin
+RUN pip install Flask gunicorn
 
 WORKDIR /tmp
-COPY app/ .
+COPY . .
 EXPOSE 8080
 
-CMD ["python", "__init__.py"]
+CMD exec gunicorn -b 0.0.0.0:8080 --workers 1 --threads 8 app:app
+# CMD exec python app.py
