--- a/elab/Dockerfile.dev
+++ b/elab/Dockerfile.dev
@@ -16,15 +16,9 @@ RUN conda install -c conda-forge -y \
   && conda build purge-all
 
 RUN pip install --no-cache-dir firebase-admin
-RUN pip install Flask gunicorn
 
 WORKDIR /tmp
-RUN mkdir /tmp/app
-COPY app/ ./app
-COPY modules/ ./modules
-COPY Logs/ ./Logs
-COPY Data/ ./Data
+COPY . .
 EXPOSE 8080
 
-CMD exec gunicorn -b 0.0.0.0:8080 --workers 1 --threads 8 app:app
-# CMD exec python app.py
+CMD ["python", "__init__.py"]
