--- a/elab/docker-compose.yml
+++ b/elab/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         dockerfile: Dockerfile
         context: .
       volumes:
-        - ./app:/tmp
+        - .:/tmp/elab/
       ports:
         - "8080:8080"
       stdin_open: true
